# ROTed

./: .gitignore  .gitmodules  CMakeCompilers.txt  CMakeLists-BLAKE3.txt  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  benchmarks.sh  init-repo.sh  setup_gravitron.sh
cmake/: FindCUNIT.cmake  FindMPFR.cmake
crypto_project/: CMakeLists.txt
crypto_project/include/: aes.h  aes_cbc.h  sha256.h
crypto_project/lib/: aes.c  aes_cbc.c  sha256.c
include/: comm.hpp  comm_rot.hpp  cpucycles.h  macros.hpp  rlweke.hpp  rlweot.hpp  rlwerot.hpp  roms.hpp  symenc.hpp
nfl/: CMakeLists.txt
nfl/include/nfl/: arch.hpp  core.hpp  ops.hpp  params.hpp  poly.hpp  poly_p.hpp
nfl/include/nfl/arch/: common.hpp
nfl/include/nfl/opt/arch/: avx2.hpp  avx512.hpp  neon.hpp
nfl/include/nfl/prng/: FastGaussianNoise.hpp  crypto_stream_salsa20.h
nfl/lib/params/: params.cpp
nfl/lib/prng/: fastrandombytes.cpp  nfl_crypto_stream_salsa20_arm32_xmm6.s
nfl/tests/: nfl_eq.cpp  nfl_neq.cpp  nfl_stream.cpp  nfllib_demo_main_op.cpp  ntt_perfs.cpp  poly_mpz.cpp  poly_p.cpp  poly_serialize_manually.cpp
pvw/: CMakeLists.txt
pvw/include/: ddh.hpp  ddhcry.hpp  ddhot.hpp
rel_art/: CMakeLists.txt
rel_art/include/: cpucycles.h  ddh.hpp  ddhcry.hpp  ddhot.hpp
rel_art/src/: main.cpp
src/: cpucycles.c  main.cpp
utils/: benchmarks.sh  openssl_old.patch  restore_cpufreq.sh  set_cpufreq.sh  watch_cpufreq.sh
